# oauth2

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent_docs/: python.md
docs/: index.md
specs/: 2026-03-22_23:58:11-oauth2-authorization-server.md  BACKLOG.md
src/: __init__.py  app.py  cli.py  config.py  dependencies.py  logging_config.py  tracing.py
src/crypto/: __init__.py  jwt_handler.py  keys.py  password.py  pkce.py
src/middleware/: rate_limiter.py  security_headers.py
src/models/: __init__.py  base.py  client.py  consent.py  saml.py  schemas.py  scope.py  token.py  user.py
src/routes/: admin.py  auth.py  federation.py  health.py  oauth.py  oidc.py
src/services/: __init__.py  audit_service.py  auth_code_service.py  bootstrap.py  client_service.py  consent_service.py  device_code_service.py  saml_service.py  scope_service.py  social_service.py  token_service.py  user_service.py
src/storage/: __init__.py  base.py  json_backend.py
src/templates/: consent.html  device_verify.html  error.html  login.html
tests/: __init__.py  conftest.py  test_cli.py  test_crypto.py  test_logging.py  test_middleware.py  test_rate_limiter_middleware.py  test_routes.py  test_services.py  test_social_saml.py  test_storage.py  test_tracing.py
